--- a/public/sass/helpers/_gradients.scss
+++ b/public/sass/helpers/_gradients.scss
@@ -5,3 +5,61 @@
     background: -moz-linear-gradient($angle, $color1, $color2);
     background: linear-gradient($angle, $color1, $color2);
 }
+
+@mixin checkerboard($color1, $color2) {
+    background-color: $color1;
+    background-image: -webkit-linear-gradient(
+        34deg, $color2 25%, transparent 25%, transparent 75%,
+        $color2 75%, $color2),
+        -webkit-linear-gradient(
+        146deg, $color2 25%, transparent 25%, transparent 75%,
+        $color2 75%, $color2);
+    background-image: -o-linear-gradient(
+        34deg, $color2 25%, transparent 25%, transparent 75%,
+        $color2 75%, $color2),
+        -o-linear-gradient(
+        146deg, $color2 25%, transparent 25%, transparent 75%,
+        $color2 75%, $color2);
+    background-image: -moz-linear-gradient(
+        34deg, $color2 25%, transparent 25%, transparent 75%,
+        $color2 75%, $color2),
+        -moz-linear-gradient(
+        146deg, $color2 25%, transparent 25%, transparent 75%,
+        $color2 75%, $color2);
+    background-image: linear-gradient(
+        34deg, $color2 25%, transparent 25%, transparent 75%,
+        $color2 75%, $color2),
+        linear-gradient(
+        146deg, $color2 25%, transparent 25%, transparent 75%,
+        $color2 75%, $color2);
+    background-size: $scrnhgt * 0.12 $scrnhgt * 0.08;
+}
+
+@mixin crisscross($color1, $color2, $color3) {
+    background-color: $color2;
+    background-image: -webkit-linear-gradient(
+        34deg, transparent 20%, $color1 24%, $color1 26%, transparent 30%,
+        transparent 70%, $color1 74%, $color1 76%, transparent 80%),
+        -webkit-linear-gradient(
+        146deg, transparent 20%, $color1 24%, $color1 26%, transparent 30%,
+        transparent 70%, $color1 74%, $color1 76%, transparent 80%);
+    background-image: -o-linear-gradient(
+        34deg, transparent 20%, $color1 24%, $color1 26%, transparent 30%,
+        transparent 70%, $color1 74%, $color1 76%, transparent 80%),
+        -o-linear-gradient(
+        146deg, transparent 20%, $color1 24%, $color1 26%, transparent 30%,
+        transparent 70%, $color1 74%, $color1 76%, transparent 80%);
+    background-image: -moz-linear-gradient(
+        34deg, transparent 20%, $color1 24%, $color1 26%, transparent 30%,
+        transparent 70%, $color1 74%, $color1 76%, transparent 80%),
+        -moz-linear-gradient(
+        146deg, transparent 20%, $color1 24%, $color1 26%, transparent 30%,
+        transparent 70%, $color1 74%, $color1 76%, transparent 80%);
+    background-image: linear-gradient(
+        34deg, $color3, transparent 20%, $color1 24%, $color1 26%, transparent 30%,
+        transparent 70%, $color1 74%, $color1 76%, transparent 80%, $color3),
+        linear-gradient(
+        146deg, $color3, transparent 20%, $color1 24%, $color1 26%, transparent 30%,
+        transparent 70%, $color1 74%, $color1 76%, transparent 80%, $color3);
+    background-size: $scrnhgt * 0.24 $scrnhgt * 0.16;
+}
