--- a/public/sass/index.scss
+++ b/public/sass/index.scss
@@ -17,7 +17,7 @@ $smallh1fontsize: 0.8 * $smallh1hght;
 }
 
 body {
-    background-color: $light-green;
+    //background-color: $light-green;
 }
 
 #header {
@@ -54,21 +54,23 @@ h1 {
 
 #buttons {
     text-align: right;
+    padding-right: 2em;
 }
 
 .button {
     display: inline-block;
-    font-size: 0.6 * 0.1 * $scrnhgt;
-    line-height: 0.6 * 0.1 * $scrnhgt;
+    font-size: 0.4 * 0.1 * $scrnhgt;
+    line-height: 0.4 * 0.1 * $scrnhgt;
     color: $light-green;
     text-shadow: 2px 2px 3px  $dark-green;
     text-align: center;
-    padding: 0.2 * 0.1 * $scrnhgt 0.5em 0.2 * 0.1 * $scrnhgt 0.5em;
+    padding: 0.3 * 0.1 * $scrnhgt 0.5em 0.3 * 0.1 * $scrnhgt 0.5em;
 }
 
 #container {
     height: $h1hght;
     transition: all 1s;
+    @include crisscross(white, $light-green, $dark-green);
 }
 
 .largeContainer {
