--- a/public/sass/game.scss
+++ b/public/sass/game.scss
@@ -5,11 +5,9 @@
 $scrnwdth: 100vw;
 $scrnhgt: 100vh;
 
-$hdrhght: 0.8 * $scrnhgt;
-$smallhdrhght: 0.2 * $scrnhgt;
-$h1hght: 0.73 * $scrnhgt;
-$smallh1hght: 0.13 * $scrnhgt;
-$smallh1fontsize: 0.7 * $smallh1hght;
+$hdrhght: 0.2 * $scrnhgt;
+$h1hght: 0.13 * $scrnhgt;
+$h1fontsize: 0.7 * $h1hght;
 
 * {
     margin: 0;
@@ -25,32 +23,18 @@ body {
     @include linear-gradient(105deg, $dark-green, $green);
     box-shadow: 0px 2px 5px $gray;
     transition: all 1s;
-    position: fixed;
     width: $scrnwdth;
-}
-
-.largeHeader {
     height: $hdrhght;
 }
 
 h1 {
     @include vertical-flexbox;
-    font-size: 10em;
+    font-size: $h1fontsize;
+    line-height: $h1fontsize;
     height: $h1hght;
     color: $light-green;
     text-shadow: 2px 2px 5px $dark-green;
     transition: all 1s;
-}
-
-.shrinkHeader {
-    height: $smallhdrhght;
-}
-
-.shrinkH1 {
-    margin: 0;
-    height: $smallh1hght;
-    font-size: $smallh1fontsize;
-    line-height: $smallh1fontsize;
 }
 
 #buttons {
@@ -72,14 +56,6 @@ h1 {
     height: $h1hght;
     transition: all 1s;
     background: transparent;
-}
-
-.largeContainer {
-    padding-top: $scrnhgt;
-}
-
-.shrinkContainer {
-    padding-top: 0.5 * $scrnhgt;
 }
 
 a, a:visited, a:link {
