--- a/public/sass/helpers/_gradients.scss
+++ b/public/sass/helpers/_gradients.scss
@@ -1,4 +1,6 @@
 @mixin linear-gradient($angle, $color1, $color2) {
+    $color1: transparentize($color1, 0.25);
+    $color2: transparentize($color2, 0.25);
     background: $color1;
     background: -webkit-linear-gradient($angle, $color1, $color2);
     background: -o-linear-gradient($angle, $color1, $color2);
