--- a/public/sass/index.scss
+++ b/public/sass/index.scss
@@ -94,4 +94,5 @@ a, a:visited, a:link {
     @include linear-gradient(75deg, $dark-green, $green);
     box-shadow: 0px -2px 5px $gray;
     color: $light-green;
+    text-shadow: 2px 2px 5px $dark-green;
 }
