--- a/public/style/game.css
+++ b/public/style/game.css
@@ -19,8 +19,8 @@ body {
   background: linear-gradient(105deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
   box-shadow: 0px 2px 5px #555555;
   transition: all 1s;
-  width: 100vw;
-  height: 20vh; }
+  max-width: 100vw;
+  height: 16vh; }
 
 h1 {
   display: -webkit-flex;
@@ -29,62 +29,485 @@ h1 {
   -webkit-justify-content: space-around;
   -webkit-align-items: center;
   -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
   display: flex;
   flex: 1;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   align-content: space-around;
-  font-size: 9.1vh;
-  line-height: 9.1vh;
-  height: 13vh;
+  flex-wrap: wrap;
+  font-size: 7vh;
+  line-height: 7vh;
+  height: 10vh;
   color: #DCFEED;
   text-shadow: 2px 2px 5px #125521;
   transition: all 1s; }
 
 #buttons {
   text-align: right;
-  padding-right: 2em; }
+  padding-right: 2em;
+  max-width: 100vw; }
 
 .button {
   display: inline-block;
-  font-size: 2.8vh;
-  line-height: 2.8vh;
+  font-size: 2.4vh;
+  line-height: 2.4vh;
   color: #DCFEED;
   text-shadow: 2px 2px 3px #125521;
   text-align: center;
-  padding: 2.1vh 0.5em 2.1vh 0.5em; }
+  padding: 1.8vh 0.5em 1.8vh 0.5em; }
+
+.button:hover {
+  color: #125521; }
+
+.button:active {
+  color: #125521;
+  text-shadow: -1px -1px 2px #111111; }
 
 #container {
-  height: 13vh;
+  height: 77vh;
   transition: all 1s;
-  background: transparent; }
+  background-color: rgba(220, 254, 237, 0.7);
+  padding-bottom: 1vh; }
 
-a, a:visited, a:link {
-  text-decoration: none;
-  color: inherit; }
-
-#footer {
-  height: 15vh;
-  font-size: 3em;
+#notification {
+  height: 7vh;
+  color: #125521;
   display: -webkit-flex;
   -webkit-flex: 1;
   -webkit-flex-direction: column;
   -webkit-justify-content: space-around;
   -webkit-align-items: center;
   -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
   display: flex;
   flex: 1;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   align-content: space-around;
+  flex-wrap: wrap;
+  font-size: 4.2vh;
+  background: transparent; }
+
+#game {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: row;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  height: 70vh; }
+
+#playerScores {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  height: 56vh;
+  width: calc($scrnwdth - $boardsize)/2; }
+
+#playerbox {
+  width: 50%;
+  border-radius: 10px;
+  margin-left: 30%;
+  padding-top: 2.8vh;
+  padding-bottom: 2.8vh;
+  box-shadow: 2px 2px 5px #555555; }
+
+hr {
+  width: 80%;
+  border-top: 1px solid rgba(18, 85, 33, 0.8);
+  border-bottom: none;
+  margin: 0 10%;
+  box-shadow: 0px 0px 2px #555555; }
+
+.info {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  height: 5.6vh;
+  font-size: 3.5vh;
+  color: #125521; }
+
+#board {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: row;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  min-height: 70vh;
+  height: 70vh;
+  min-width: 70vh;
+  width: 70vh; }
+
+.cell {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  width: 16.45vh;
+  max-width: 16.45vh;
+  min-width: 16.45vh;
+  height: 16.45vh;
+  max-height: 16.45vh;
+  min-height: 16.45vh;
+  border: 0;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px #555555; }
+
+#pieces {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  height: 70vh;
+  width: calc($scrnwdth - $boardsize)/2; }
+
+#piecesBox {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: flex-start;
+  -webkit-align-items: flex-start;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: space-around;
+  flex-wrap: wrap;
+  width: 50%;
+  margin-right: 30%;
+  height: 70vh;
+  max-height: 70vh; }
+
+.piece {
+  width: 10.96667vh;
+  max-width: 10.96667vh;
+  min-width: 10.96667vh;
+  height: 10.96667vh;
+  max-height: 10.96667vh;
+  min-height: 10.96667vh;
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  margin: 0.35vh;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px #555555; }
+
+.piece:hover, .cell:hover {
+  background-color: rgba(18, 85, 33, 0.2); }
+
+.piece:active, .cell:active {
+  background-color: rgba(18, 85, 33, 0.4);
+  box-shadow: -2px -2px 5px #555555; }
+
+a, a:visited, a:link {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer; }
+
+a.info {
+  color: #125521; }
+
+a.info:hover {
+  background-color: rgba(18, 85, 33, 0.2); }
+
+a.info:active {
+  background-color: rgba(18, 85, 33, 0.5); }
+
+#footer {
+  height: 6vh;
+  font-size: 3vh;
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
   background: rgba(18, 85, 33, 0.75);
   background: -webkit-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
   background: -o-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
   background: -moz-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
   background: linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
-  box-shadow: 0px -2px 5px #555555;
-  color: #DCFEED; }
+  color: #DCFEED;
+  text-shadow: 2px 2px 5px #125521; }
+
+.WBRO {
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 80%;
+  max-width: 80%;
+  min-width: 80%;
+  height: 80%;
+  max-height: 80%;
+  min-height: 80%;
+  border-radius: 50%;
+  border: 2px solid rgba(18, 85, 33, 0.8);
+  box-shadow: 0px 0px 2px #111111; }
+
+.WBRN {
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 80%;
+  max-width: 80%;
+  min-width: 80%;
+  height: 80%;
+  max-height: 80%;
+  min-height: 80%;
+  border-radius: 50%;
+  border: none;
+  box-shadow: 0px 0px 2px #111111; }
+
+.WBQO {
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 80%;
+  max-width: 80%;
+  min-width: 80%;
+  height: 80%;
+  max-height: 80%;
+  min-height: 80%;
+  border-radius: none;
+  border: 2px solid rgba(18, 85, 33, 0.8);
+  box-shadow: 0px 0px 2px #111111; }
+
+.WBQN {
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 80%;
+  max-width: 80%;
+  min-width: 80%;
+  height: 80%;
+  max-height: 80%;
+  min-height: 80%;
+  border-radius: none;
+  border: none;
+  box-shadow: 0px 0px 2px #111111; }
+
+.WSRO {
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 50%;
+  max-width: 50%;
+  min-width: 50%;
+  height: 50%;
+  max-height: 50%;
+  min-height: 50%;
+  border-radius: 50%;
+  border: 2px solid rgba(18, 85, 33, 0.8);
+  box-shadow: 0px 0px 2px #111111; }
+
+.WSRN {
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 50%;
+  max-width: 50%;
+  min-width: 50%;
+  height: 50%;
+  max-height: 50%;
+  min-height: 50%;
+  border-radius: 50%;
+  border: none;
+  box-shadow: 0px 0px 2px #111111; }
+
+.WSQO {
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 50%;
+  max-width: 50%;
+  min-width: 50%;
+  height: 50%;
+  max-height: 50%;
+  min-height: 50%;
+  border-radius: none;
+  border: 2px solid rgba(18, 85, 33, 0.8);
+  box-shadow: 0px 0px 2px #111111; }
+
+.WSQN {
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 50%;
+  max-width: 50%;
+  min-width: 50%;
+  height: 50%;
+  max-height: 50%;
+  min-height: 50%;
+  border-radius: none;
+  border: none;
+  box-shadow: 0px 0px 2px #111111; }
+
+.GBRO {
+  background-color: rgba(33, 204, 67, 0.6);
+  width: 80%;
+  max-width: 80%;
+  min-width: 80%;
+  height: 80%;
+  max-height: 80%;
+  min-height: 80%;
+  border-radius: 50%;
+  border: 2px solid rgba(18, 85, 33, 0.8);
+  box-shadow: 0px 0px 2px #111111; }
+
+.GBRN {
+  background-color: rgba(33, 204, 67, 0.6);
+  width: 80%;
+  max-width: 80%;
+  min-width: 80%;
+  height: 80%;
+  max-height: 80%;
+  min-height: 80%;
+  border-radius: 50%;
+  border: none;
+  box-shadow: 0px 0px 2px #111111; }
+
+.GBQO {
+  background-color: rgba(33, 204, 67, 0.6);
+  width: 80%;
+  max-width: 80%;
+  min-width: 80%;
+  height: 80%;
+  max-height: 80%;
+  min-height: 80%;
+  border-radius: none;
+  border: 2px solid rgba(18, 85, 33, 0.8);
+  box-shadow: 0px 0px 2px #111111; }
+
+.GBQN {
+  background-color: rgba(33, 204, 67, 0.6);
+  width: 80%;
+  max-width: 80%;
+  min-width: 80%;
+  height: 80%;
+  max-height: 80%;
+  min-height: 80%;
+  border-radius: none;
+  border: none;
+  box-shadow: 0px 0px 2px #111111; }
+
+.GSRO {
+  background-color: rgba(33, 204, 67, 0.6);
+  width: 50%;
+  max-width: 50%;
+  min-width: 50%;
+  height: 50%;
+  max-height: 50%;
+  min-height: 50%;
+  border-radius: 50%;
+  border: 2px solid rgba(18, 85, 33, 0.8);
+  box-shadow: 0px 0px 2px #111111; }
+
+.GSRN {
+  background-color: rgba(33, 204, 67, 0.6);
+  width: 50%;
+  max-width: 50%;
+  min-width: 50%;
+  height: 50%;
+  max-height: 50%;
+  min-height: 50%;
+  border-radius: 50%;
+  border: none;
+  box-shadow: 0px 0px 2px #111111; }
+
+.GSQO {
+  background-color: rgba(33, 204, 67, 0.6);
+  width: 50%;
+  max-width: 50%;
+  min-width: 50%;
+  height: 50%;
+  max-height: 50%;
+  min-height: 50%;
+  border-radius: none;
+  border: 2px solid rgba(18, 85, 33, 0.8);
+  box-shadow: 0px 0px 2px #111111; }
+
+.GSQN {
+  background-color: rgba(33, 204, 67, 0.6);
+  width: 50%;
+  max-width: 50%;
+  min-width: 50%;
+  height: 50%;
+  max-height: 50%;
+  min-height: 50%;
+  border-radius: none;
+  border: none;
+  box-shadow: 0px 0px 2px #111111; }
+
+.selected {
+  background-color: rgba(18, 85, 33, 0.6);
+  box-shadow: none; }
 
 /*# sourceMappingURL=game.css.map */
