--- a/public/sass/helpers/_gradients.scss
+++ b/public/sass/helpers/_gradients.scss
@@ -11,30 +11,31 @@
 @mixin checkerboard($color1, $color2) {
     background-color: $color1;
     background-image: -webkit-linear-gradient(
-        34deg, $color2 25%, transparent 25%, transparent 75%,
+        45deg, $color2 25%, transparent 25%, transparent 75%,
         $color2 75%, $color2),
         -webkit-linear-gradient(
-        146deg, $color2 25%, transparent 25%, transparent 75%,
+        -45deg, $color2 25%, transparent 25%, transparent 75%,
         $color2 75%, $color2);
     background-image: -o-linear-gradient(
-        34deg, $color2 25%, transparent 25%, transparent 75%,
+        45deg, $color2 25%, transparent 25%, transparent 75%,
         $color2 75%, $color2),
         -o-linear-gradient(
-        146deg, $color2 25%, transparent 25%, transparent 75%,
+        -45deg, $color2 25%, transparent 25%, transparent 75%,
         $color2 75%, $color2);
     background-image: -moz-linear-gradient(
-        34deg, $color2 25%, transparent 25%, transparent 75%,
+        45deg, $color2 25%, transparent 25%, transparent 75%,
         $color2 75%, $color2),
         -moz-linear-gradient(
-        146deg, $color2 25%, transparent 25%, transparent 75%,
+        -45deg, $color2 25%, transparent 25%, transparent 75%,
         $color2 75%, $color2);
     background-image: linear-gradient(
-        34deg, $color2 25%, transparent 25%, transparent 75%,
+        45deg, $color2 25%, transparent 25%, transparent 75%,
         $color2 75%, $color2),
         linear-gradient(
-        146deg, $color2 25%, transparent 25%, transparent 75%,
+        -45deg, $color2 25%, transparent 25%, transparent 75%,
         $color2 75%, $color2);
-    background-size: $scrnhgt * 0.12 $scrnhgt * 0.08;
+    background-size: 35% 35%;
+    background-position: center;
 }
 
 @mixin crisscross($color1, $color2, $color3) {
