--- a/public/style/index.css
+++ b/public/style/index.css
@@ -23,7 +23,70 @@ body {
   width: 100vw; }
 
 .largeHeader {
-  height: 80vh; }
+  width: 100vw;
+  max-width: 100vw;
+  min-width: 100vw;
+  height: 80vh;
+  max-height: 80vh;
+  min-height: 80vh; }
+
+.shrinkHeader {
+  width: 100vw;
+  max-width: 100vw;
+  min-width: 100vw;
+  height: 20vh;
+  max-height: 20vh;
+  min-height: 20vh; }
+
+#logo {
+  background-color: #DCFEED;
+  background-image: -webkit-linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), -webkit-linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
+  background-image: -o-linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), -o-linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
+  background-image: -moz-linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), -moz-linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
+  background-image: linear-gradient(45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43), linear-gradient(-45deg, #21CC43 25%, transparent 25%, transparent 75%, #21CC43 75%, #21CC43);
+  background-size: 35% 35%;
+  background-position: center;
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px #555555;
+  text-align: center;
+  color: #125521; }
+
+.logoLarge {
+  width: 28.47vh;
+  max-width: 28.47vh;
+  min-width: 28.47vh;
+  height: 28.47vh;
+  max-height: 28.47vh;
+  min-height: 28.47vh;
+  border: 0.365vh solid #DCFEED;
+  margin: 3.65vh auto;
+  font-size: 19.929vh; }
+
+.logoSmall {
+  width: 10.14vh;
+  max-width: 10.14vh;
+  min-width: 10.14vh;
+  height: 10.14vh;
+  max-height: 10.14vh;
+  min-height: 10.14vh;
+  border: 0.13vh solid #DCFEED;
+  margin: 0 0 0 2em;
+  font-size: 7.098vh;
+  float: left; }
 
 h1 {
   display: -webkit-flex;
@@ -32,20 +95,20 @@ h1 {
   -webkit-justify-content: space-around;
   -webkit-align-items: center;
   -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
   display: flex;
   flex: 1;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   align-content: space-around;
-  font-size: 10em;
-  height: 73vh;
+  flex-wrap: wrap;
+  font-size: 21.9vh;
+  height: 36.5vh;
   color: #DCFEED;
   text-shadow: 2px 2px 5px #125521;
-  transition: all 1s; }
-
-.shrinkHeader {
-  height: 20vh; }
+  transition: all 1s;
+  clear: none; }
 
 .shrinkH1 {
   margin: 0;
@@ -66,7 +129,28 @@ h1 {
   text-align: center;
   padding: 2.1vh 0.5em 2.1vh 0.5em; }
 
+.button:hover {
+  color: #125521; }
+
+.button:active {
+  color: #125521;
+  text-shadow: -1px -1px 2px #111111; }
+
 #container {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
   height: 73vh;
   transition: all 1s;
   background: transparent; }
@@ -75,33 +159,209 @@ h1 {
   padding-top: 100vh; }
 
 .shrinkContainer {
-  padding-top: 50vh; }
+  padding-top: 45vh; }
 
-a, a:visited, a:link {
-  text-decoration: none;
-  color: inherit; }
-
-#footer {
-  height: 15vh;
-  font-size: 3em;
+#card {
+  width: 80%;
+  max-width: 80%;
+  min-width: 80%;
+  height: 64vh;
+  max-height: 64vh;
+  min-height: 64vh;
   display: -webkit-flex;
   -webkit-flex: 1;
   -webkit-flex-direction: column;
   -webkit-justify-content: space-around;
   -webkit-align-items: center;
   -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
   display: flex;
   flex: 1;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   align-content: space-around;
+  flex-wrap: wrap;
+  background-color: rgba(220, 254, 237, 0.8);
+  box-shadow: 0px 0px 5px #555555;
+  font-size: 2em;
+  color: #125521;
+  text-align: center; }
+
+#links {
+  width: 70vw; }
+
+h2 {
+  font-size: 1.5em; }
+
+h3 {
+  font-size: 0.8em; }
+
+.link, input[type=submit] {
+  display: inline-block;
+  width: 30%;
+  text-align: center;
+  font-weight: bold; }
+
+hr {
+  width: 90%;
+  border-top: 1px solid rgba(18, 85, 33, 0.8);
+  border-bottom: none;
+  margin: 0 5%;
+  box-shadow: 0px 0px 2px #555555; }
+
+input {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em; }
+
+input[type=submit], input[type=submit]:focus {
+  width: 70%;
+  margin: 0.5em 15%;
+  font-size: 1em;
+  background-color: inherit;
+  border: none;
+  box-shadow: 0px 0px 2px #555555;
+  outline: none;
+  color: #125521; }
+
+.gameType p {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  display: inline-block;
+  width: 20%;
+  margin: 0.25em 15%;
+  height: 5%;
+  text-align: justify; }
+
+input[type=text], input[type=text]:focus {
+  width: 80%;
+  margin: 0.5em 10%;
+  color: #125521;
+  outline: none;
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  background: inherit;
+  border: none;
+  border-bottom: 1px solid #125521; }
+
+.link:hover, input[type=submit]:hover {
+  background-color: rgba(18, 85, 33, 0.2); }
+
+.link:active, input[type=submit]:active {
+  background-color: rgba(18, 85, 33, 0.5); }
+
+.link:nth-child(2) {
+  border-left: 1px solid rgba(18, 85, 33, 0.8);
+  border-right: 1px solid rgba(18, 85, 33, 0.8); }
+
+a, a:visited, a:link {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer; }
+
+#footer {
+  height: 10vh;
+  font-size: 5vh;
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
   background: rgba(18, 85, 33, 0.75);
   background: -webkit-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
   background: -o-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
   background: -moz-linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
   background: linear-gradient(75deg, rgba(18, 85, 33, 0.75), rgba(33, 204, 67, 0.75));
   box-shadow: 0px -2px 5px #555555;
-  color: #DCFEED; }
+  color: #DCFEED;
+  text-shadow: 2px 2px 5px #125521; }
+
+#newGameDiv {
+  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
+  height: 100vh;
+  max-height: 100vh;
+  min-height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(18, 85, 33, 0.6); }
+
+.notVisible {
+  display: none; }
+
+.visible {
+  display: -webkit-flex;
+  -webkit-flex: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: space-around;
+  -webkit-align-items: center;
+  -webkit-align-content: space-around;
+  -webkit-flex-wrap: wrap;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+  display: -webkit-flex;
+  display: flex; }
+
+#types {
+  width: 80%;
+  max-width: 80%;
+  min-width: 80%;
+  height: 80vh;
+  max-height: 80vh;
+  min-height: 80vh;
+  background-color: rgba(220, 254, 237, 0.8);
+  border-radius: 10px;
+  font-size: 1em;
+  color: #125521; }
+
+#hotSeat {
+  width: 40%;
+  max-width: 40%;
+  min-width: 40%;
+  height: 70vh;
+  max-height: 70vh;
+  min-height: 70vh;
+  padding: 5vh 5%; }
+
+h4 {
+  text-align: center;
+  font-size: 1.5em; }
+
+h5 {
+  text-align: center;
+  font-size: 1.2em; }
+
+h6 {
+  text-align: center;
+  font-size: 1em; }
 
 /*# sourceMappingURL=index.css.map */
